# BuffetBot

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE
buffett-bot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
buffett-bot/.github/: copilot-instructions.md
buffett-bot/.github/workflows/: build-and-push.yml  lint.yml
buffett-bot/config/: conviction_list.yaml  screening_criteria.yaml
buffett-bot/data/: watchlist_cache.json
buffett-bot/data/analyses/: BCRX.json  IBOC.json  WAL.json
buffett-bot/docs/: SETUP.md
buffett-bot/scripts/: __init__.py  bulk_load.py  portfolio_status.py  run_briefing.py  run_monthly_briefing.py  scheduler.py
buffett-bot/src/: __init__.py  analysis_parser.py  analyzer.py  backtest.py  benchmark.py  briefing.py  bubble_detector.py  config.py  database.py  deployment.py  edgar_fetcher.py  edgar_fundamentals.py  fx.py  insider.py  journal_report.py  news_fetcher.py  notifications.py  paper_trader.py  portfolio.py  quality_scorer.py  registry.py  screener.py  tier_engine.py  universe.py  universe_builder.py  valuation.py
buffett-bot/tests/: test_accounts.py  test_backtest.py  test_bulk_load.py  test_database.py  test_db_briefing.py  test_deployment.py  test_edgar_fetcher.py  test_edgar_fundamentals.py  test_fx.py  test_insider.py  test_journal.py  test_news_fetcher.py  test_notifications.py  test_portfolio.py  test_portfolio_log.py  test_quality_scorer.py  test_scheduler.py  test_tier_engine.py  test_universe_builder.py  test_valuation.py  test_weekly_cycle.py
(+12 files in other folders)
