[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "buffettbot"
version = "2.0.0"
description = "Buffett-style automated value-investing research bot"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

# `src` and `scripts` are the importable packages. Installing the project
# (pip install -e .) makes `from src.x import y` / `from scripts.x import y`
# resolve everywhere — no sys.path bootstrapping, and IDEs/type-checkers find
# them without manually marking source roots.
[tool.setuptools.packages.find]
include = ["src*", "scripts*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["requirements-dev.txt"] } }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
# Test modules bootstrap sys.path / mock sys.modules before importing the code
# under test, so module-level imports legitimately follow executable statements.
"tests/*" = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.bandit]
targets = ["src", "scripts"]
skips = ["B101", "B108", "B110", "B113", "B603", "B607"]
